# assignment1-sol

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: invalid.cfg  sample.cfg  with_comments.cfg
include/: config.hpp  scope_probe.hpp  string_table.hpp  temp_file.hpp
src/: config.cpp  scope_probe.cpp  string_table.cpp  temp_file.cpp
tests/: test_build_only.cpp  test_partA_scope_probe.cpp
